<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/board_light"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/settings_title" />

    <LinearLayout
        android:id="@+id/settingsContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RadioGroup
            android:id="@+id/startPlayerGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/startWhiteRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_white" />

            <RadioButton
                android:id="@+id/startBlackRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/start_black" />
        </RadioGroup>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/vsComputerSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/vs_computer" />
    </LinearLayout>
</LinearLayout>
